updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 24 years old, I listen to a lot of music, and I have a dog.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Edina, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing video games and going to concerts (R.I.P large outdoor events)</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game Dev</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Edina</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been using computers and the internet pretty much my whole life and wanted to learn to how to create the things I interact with daily.</p>
     </section>
 
     <footer id="footer">
